# WaVoice

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
docs/: PROJECT.md
docs/superpowers/plans/: 2026-05-22-wavoic-mvp.md
docs/superpowers/specs/: 2026-05-22-wavoic-design.md
src/: api.ts  index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  hotkeys.rs  library.rs  main.rs  state.rs
src-tauri/src/audio/: carrier.rs  engine.rs  mic_capture.rs  mixer.rs  mod.rs  music_player.rs  types.rs  virtual_sink.rs
src/components/: library.ts  player-bar.ts  settings.ts
